Change STREAM_COPY to DYNAMIC_COPY, instructions paragraph added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
+		<p id="instructions">Click to explode</p>
 	</body>
 
 	<script src="build/main.js" type="module"></script>
