--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 	<body>
 		<canvas id="canvas"></canvas>
 		<p id="instructions">Click to explode</p>
+		<div id="debug">
+			<p>press 'P' to toggle debug</p>
+			<p id="debug-particle-count">particle count: 999</p>
+			<p id="debug-fps">fps: 999</p>
+			<p id="debug-frame-time">frame time: 999ms</p>
+		</div>
 	</body>
 
 	<script src="build/main.js" type="module"></script>
