--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
+		<p id="instructions">Move your mouse around :)</p>
 		<div id="debug">
 			<p>press 'P' to toggle debug</p>
 			<p id="debug-particle-count">particle count: 999</p>
